--- a/about.html
+++ b/about.html
@@ -88,7 +88,7 @@
               <!-- logo -->
               <div class="navbar-brand">
                 <a href="index.php" >
-                  <img src="images/logo.png" alt="" class="logo">
+                  <img src="images/logo.png" alt="Logo - romane Donjon" class="logo">
                 </a>
               </div>
               <!-- /logo -->
@@ -136,7 +136,7 @@
                 <div class="row">
                  <div class="col-md-6 col-sm-6">
                   <div class="block wow fadeInRight" data-wow-delay=".3s" data-wow-duration="500ms">
-                    <img src="images/about/portrait-rd.png" alt="">
+                    <img src="images/about/portrait-rd.png" alt="Romane Donjon - Autoportrait">
                   </div>
                 </div>
                 <div class="col-md-6 col-sm-6">
@@ -167,7 +167,7 @@
                   <div class="col-md-6">
                     <div class="row">
                       <div class="col-md-12 block wow fadeInDown">
-                        <img src="images/about/quotation-mark.png" class="img-responsive quotes" alt="portfolio items">
+                        <img src="images/about/quotation-mark.png" class="img-responsive quotes" alt="Romane Donjon - Témoignage Lionnel Ferreira">
 
                         <p >Agissant en tant que chargé d’affaires, je travaille en étroite collaboration avec Romane Donjon sur des besoins commerciaux variés ou demandes clients. En quelques mots, Romane conjugue à merveille ses compétences et ses qualités humaines.
                          Je retiendrai notamment :</p>
@@ -194,7 +194,7 @@
                  <div class="col-md-6 block wow fadeInDown">
                   <div class="row">
                     <div class="col-md-2 quotes">
-                     <img src="images/about/quotation-mark2.png" class="img-responsive" alt="portfolio items">
+                     <img src="images/about/quotation-mark2.png" class="img-responsive" alt="Romane Donjon - Témoignage Mickaël Cousin">
                    </div>
                    <div class="col-md-10">
                     <p>Exerçant dans l’édition de logiciel et le web, nous avons eu besoin des services de Romane, notamment en infographie, dans l’intégration web et le rédactionnel.
@@ -206,7 +206,7 @@
                 </div>
                 <div class="row">
                   <div class="col-md-2 quotes">
-                    <img src="images/about/quotation-mark.png" class="img-responsive" alt="portfolio items">
+                    <img src="images/about/quotation-mark.png" class="img-responsive" alt="Romane Donjon - Témoignage Cindy CRÉTIN et Jérémy FILLON">
                   </div>
                   <div class="col-md-10">
                     <p>Un immense merci à Romane pour son professionnalisme et sa générosité, nous
