--- a/infographie.html
+++ b/infographie.html
@@ -88,7 +88,7 @@ Header Section Start
       <!-- logo -->
       <div class="navbar-brand">
         <a href="index.php" >
-          <img src="images/logo.png" alt="" class="logo">
+          <img src="images/logo.png" alt="romane Donjon - Logo" class="logo">
         </a>
       </div>
       <!-- /logo -->
@@ -139,7 +139,7 @@ Global Page Section Start
       <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 realisations">
         <figure class="wow fadeInLeft animated animated" data-wow-duration="300ms" data-wow-delay="600ms" style="visibility: visible; animation-duration: 300ms; -webkit-animation-duration: 300ms; animation-delay: 600ms; -webkit-animation-delay: 600ms; animation-name: fadeInLeft; -webkit-animation-name: fadeInLeft;">
           <div class="img-wrapper">
-            <img src="images/portfolio/carte-etik.jpg" class="img-responsive" alt="">
+            <img src="images/portfolio/carte-etik.jpg" class="img-responsive" alt="Etik Patrimoine">
             <div class="overlay">
               <div class="buttons">
                 <a rel="gallery" class="fancybox" href="images/portfolio/carte-etik.jpg">Voir</a>
@@ -159,7 +159,7 @@ Global Page Section Start
       <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 realisations">
         <figure class="wow fadeInLeft animated animated" data-wow-duration="300ms" data-wow-delay="600ms" style="visibility: visible; animation-duration: 300ms; -webkit-animation-duration: 300ms; animation-delay: 600ms; -webkit-animation-delay: 600ms; animation-name: fadeInLeft; -webkit-animation-name: fadeInLeft;">
           <div class="img-wrapper">
-            <img src="images/portfolio/faire-part-zack.jpg" class="img-responsive" alt="">
+            <img src="images/portfolio/faire-part-zack.jpg" class="img-responsive" alt="Faire part de naissance">
             <div class="overlay">
               <div class="buttons">
                 <a rel="gallery" class="fancybox" href="images/portfolio/faire-part-zack.jpg">Voir</a>
@@ -180,7 +180,7 @@ Global Page Section Start
       <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 realisations">
         <figure class="wow fadeInLeft animated portfolio-item animated" data-wow-duration="300ms" data-wow-delay="0ms" style="visibility: visible; animation-duration: 300ms; -webkit-animation-duration: 300ms; animation-delay: 0ms; -webkit-animation-delay: 0ms; animation-name: fadeInLeft; -webkit-animation-name: fadeInLeft;">
           <div class="img-wrapper">
-            <img src="images/portfolio/carte-massage.jpg" class="img-responsive" alt="portfolio items">
+            <img src="images/portfolio/carte-massage.jpg" class="img-responsive" alt="Carte de visite M. Massages et Ateliers">
             <div class="overlay">
               <div class="buttons">
                 <a rel="gallery" class="fancybox" href="images/portfolio/carte-massage.jpg">Voir</a>
@@ -201,7 +201,7 @@ Global Page Section Start
       <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 realisations">
         <figure class="wow fadeInLeft animated animated" data-wow-duration="300ms" data-wow-delay="600ms" style="visibility: visible; animation-duration: 300ms; -webkit-animation-duration: 300ms; animation-delay: 600ms; -webkit-animation-delay: 600ms; animation-name: fadeInLeft; -webkit-animation-name: fadeInLeft;">
           <div class="img-wrapper">
-            <img src="images/portfolio/logo-kine.jpg" class="img-responsive" alt="">
+            <img src="images/portfolio/logo-kine.jpg" class="img-responsive" alt="Logo kinespace">
             <div class="overlay">
               <div class="buttons">
                 <a rel="gallery" class="fancybox" href="images/portfolio/logo-kine.jpg">Voir</a>
@@ -225,7 +225,7 @@ Global Page Section Start
       <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 realisations">
         <figure class="wow fadeInLeft animated portfolio-item animated" data-wow-duration="300ms" data-wow-delay="0ms" style="visibility: visible; animation-duration: 300ms; -webkit-animation-duration: 300ms; animation-delay: 0ms; -webkit-animation-delay: 0ms; animation-name: fadeInLeft; -webkit-animation-name: fadeInLeft;">
           <div class="img-wrapper">
-            <img src="images/portfolio/massage-logo.jpg" class="img-responsive" alt="portfolio items">
+            <img src="images/portfolio/massage-logo.jpg" class="img-responsive" alt="logo M.Massages et Ateliers">
             <div class="overlay">
               <div class="buttons">
                 <a rel="gallery" class="fancybox" href="images/portfolio/massage-logo.jpg">Voir</a>
@@ -247,7 +247,7 @@ Global Page Section Start
       <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 realisations">
         <figure class="wow fadeInLeft animated portfolio-item animated" data-wow-duration="300ms" data-wow-delay="0ms" style="visibility: visible; animation-duration: 300ms; -webkit-animation-duration: 300ms; animation-delay: 0ms; -webkit-animation-delay: 0ms; animation-name: fadeInLeft; -webkit-animation-name: fadeInLeft;">
           <div class="img-wrapper">
-            <img src="images/portfolio/carte-jvpt.jpg" class="img-responsive" alt="portfolio items">
+            <img src="images/portfolio/carte-jvpt.jpg" class="img-responsive" alt="Carte de visite Je vends pour toi">
             <div class="overlay">
               <div class="buttons">
                 <a rel="gallery" class="fancybox" href="images/portfolio/carte-jvpt.jpg">Voir</a>
@@ -268,7 +268,7 @@ Global Page Section Start
       <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 realisations">
         <figure class="wow fadeInLeft animated portfolio-item animated" data-wow-duration="300ms" data-wow-delay="0ms" style="visibility: visible; animation-duration: 300ms; -webkit-animation-duration: 300ms; animation-delay: 0ms; -webkit-animation-delay: 0ms; animation-name: fadeInLeft; -webkit-animation-name: fadeInLeft;">
           <div class="img-wrapper">
-            <img src="images/portfolio/cv-kine.jpg" class="img-responsive" alt="portfolio items">
+            <img src="images/portfolio/cv-kine.jpg" class="img-responsive" alt="Carte de visite kinespace">
             <div class="overlay">
               <div class="buttons">
                 <a rel="gallery" class="fancybox" href="images/portfolio/cv-kine.jpg">Voir</a>
@@ -289,7 +289,7 @@ Global Page Section Start
       <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 realisations">
         <figure class="wow fadeInLeft animated portfolio-item animated" data-wow-duration="300ms" data-wow-delay="0ms" style="visibility: visible; animation-duration: 300ms; -webkit-animation-duration: 300ms; animation-delay: 0ms; -webkit-animation-delay: 0ms; animation-name: fadeInLeft; -webkit-animation-name: fadeInLeft;">
           <div class="img-wrapper">
-            <img src="images/portfolio/logo-arteo.jpg" class="img-responsive" alt="portfolio items">
+            <img src="images/portfolio/logo-arteo.jpg" class="img-responsive" alt="Logo Arteo">
             <div class="overlay">
               <div class="buttons">
                 <a rel="gallery" class="fancybox" href="images/portfolio/logo-arteo.jpg">Voir</a>
@@ -310,7 +310,7 @@ Global Page Section Start
       <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 realisations">
         <figure class="wow fadeInLeft animated animated" data-wow-duration="300ms" data-wow-delay="300ms" style="visibility: visible; animation-duration: 300ms; -webkit-animation-duration: 300ms; animation-delay: 300ms; -webkit-animation-delay: 300ms; animation-name: fadeInLeft; -webkit-animation-name: fadeInLeft;">
           <div class="img-wrapper">
-            <img src="images/portfolio/logo-jvpt.jpg" class="img-responsive" alt="portfolio items">
+            <img src="images/portfolio/logo-jvpt.jpg" class="img-responsive" alt="Logo Je vends pour toi">
             <div class="overlay">
               <div class="buttons">
                 <a rel="gallery" class="fancybox" href="images/portfolio/logo-jvpt.jpg">Voir</a>
@@ -330,7 +330,7 @@ Global Page Section Start
       <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 realisations">
         <figure class="wow fadeInLeft animated animated" data-wow-duration="300ms" data-wow-delay="300ms" style="visibility: visible; animation-duration: 300ms; -webkit-animation-duration: 300ms; animation-delay: 300ms; -webkit-animation-delay: 300ms; animation-name: fadeInLeft; -webkit-animation-name: fadeInLeft;">
           <div class="img-wrapper">
-            <img src="images/portfolio/carte-voeux.jpg" class="img-responsive" alt="portfolio items">
+            <img src="images/portfolio/carte-voeux.jpg" class="img-responsive" alt="Carte de voeux">
             <div class="overlay">
               <div class="buttons">
                 <a rel="gallery" class="fancybox" href="images/portfolio/carte-voeux.jpg">Voir</a>
@@ -351,7 +351,7 @@ Global Page Section Start
       <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 realisations">
         <figure class="wow fadeInLeft animated animated" data-wow-duration="300ms" data-wow-delay="300ms" style="visibility: visible; animation-duration: 300ms; -webkit-animation-duration: 300ms; animation-delay: 300ms; -webkit-animation-delay: 300ms; animation-name: fadeInLeft; -webkit-animation-name: fadeInLeft;">
           <div class="img-wrapper">
-            <img src="images/portfolio/logo-etik.jpg" class="img-responsive" alt="portfolio items">
+            <img src="images/portfolio/logo-etik.jpg" class="img-responsive" alt="Logo Etik Patrimoine">
             <div class="overlay">
               <div class="buttons">
                 <a rel="gallery" class="fancybox" href="images/portfolio/logo-etik.jpg">Voir</a>
@@ -374,7 +374,7 @@ Global Page Section Start
       <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 realisations">
         <figure class="wow fadeInLeft animated portfolio-item animated" data-wow-duration="300ms" data-wow-delay="0ms" style="visibility: visible; animation-duration: 300ms; -webkit-animation-duration: 300ms; animation-delay: 0ms; -webkit-animation-delay: 0ms; animation-name: fadeInLeft; -webkit-animation-name: fadeInLeft;">
           <div class="img-wrapper">
-            <img src="images/portfolio/dessin-vectoriel.jpg" class="img-responsive" alt="portfolio items">
+            <img src="images/portfolio/dessin-vectoriel.jpg" class="img-responsive" alt="Dessin vectoriel - vache">
             <div class="overlay">
               <div class="buttons">
                 <a rel="gallery" class="fancybox" href="images/portfolio/dessin-vectoriel.jpg">Voir</a>
@@ -395,7 +395,7 @@ Global Page Section Start
       <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 realisations">
         <figure class="wow fadeInLeft animated animated" data-wow-duration="300ms" data-wow-delay="300ms" style="visibility: visible; animation-duration: 300ms; -webkit-animation-duration: 300ms; animation-delay: 300ms; -webkit-animation-delay: 300ms; animation-name: fadeInLeft; -webkit-animation-name: fadeInLeft;">
           <div class="img-wrapper">
-            <img src="images/portfolio/autoportrait.jpg" class="img-responsive" alt="portfolio items">
+            <img src="images/portfolio/autoportrait.jpg" class="img-responsive" alt="Romane Donjon - autoportrait">
             <div class="overlay">
               <div class="buttons">
                 <a rel="gallery" class="fancybox" href="images/portfolio/autoportrait.jpg">Voir</a>
@@ -416,7 +416,7 @@ Global Page Section Start
       <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 realisations">
         <figure class="wow fadeInLeft animated animated" data-wow-duration="300ms" data-wow-delay="300ms" style="visibility: visible; animation-duration: 300ms; -webkit-animation-duration: 300ms; animation-delay: 300ms; -webkit-animation-delay: 300ms; animation-name: fadeInLeft; -webkit-animation-name: fadeInLeft;">
           <div class="img-wrapper">
-            <img src="images/portfolio/retouche-photo.jpg" class="img-responsive" alt="">
+            <img src="images/portfolio/retouche-photo.jpg" class="img-responsive" alt="Retouche photo">
             <div class="overlay">
               <div class="buttons">
                 <a rel="gallery" class="fancybox" href="images/portfolio/retouche-photo.jpg">Voir</a>
