--- a/portfolio.html
+++ b/portfolio.html
@@ -88,7 +88,7 @@
               <!-- logo -->
               <div class="navbar-brand">
                 <a href="index.php" >
-                  <img src="images/logo.png" alt="" class="logo">
+                  <img src="images/logo.png" alt="Romane Donjon - Logo" class="logo">
                 </a>
               </div>
               <!-- /logo -->
@@ -131,7 +131,7 @@
               <div class="col-md-6">
                 <figure class="wow fadeInLeft animated portfolio-item animated" data-wow-duration="300ms" data-wow-delay="0ms" style="visibility: visible; animation-duration: 300ms; -webkit-animation-duration: 300ms; animation-delay: 0ms; -webkit-animation-delay: 0ms; animation-name: fadeInLeft; -webkit-animation-name: fadeInLeft;">
                   <div class="img-wrapper">
-                    <img src="images/portfolio/infographie.jpg" class="img-responsive" alt="portfolio items">
+                    <img src="images/portfolio/infographie.jpg" class="img-responsive" alt="Romane Donjon - Infographie">
                     <div class="overlay">
                       <div class="buttons">
                         <a href="infographie.html">INFOGRAPHIE</a>
@@ -143,7 +143,7 @@
               <div class="col-md-6">
                 <figure class="wow fadeInLeft animated portfolio-item animated" data-wow-duration="300ms" data-wow-delay="0ms" style="visibility: visible; animation-duration: 300ms; -webkit-animation-duration: 300ms; animation-delay: 0ms; -webkit-animation-delay: 0ms; animation-name: fadeInLeft; -webkit-animation-name: fadeInLeft;">
                   <div class="img-wrapper">
-                    <img src="images/portfolio/webdesign.jpg" class="img-responsive" alt="portfolio items">
+                    <img src="images/portfolio/webdesign.jpg" class="img-responsive" alt="Romane Donjon - Webdesign">
                     <div class="overlay">
                       <div class="buttons">
                         <a href="webdesign.html">WEBDESIGN</a>
