--- a/webdesign.html
+++ b/webdesign.html
@@ -88,7 +88,7 @@
               <!-- logo -->
               <div class="navbar-brand">
                 <a href="index.php" >
-                  <img src="images/logo.png" alt="" class="logo">
+                  <img src="images/logo.png" alt="Romane Donjon - Logo" class="logo">
                 </a>
               </div>
               <!-- /logo -->
@@ -137,7 +137,7 @@
             <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 realisations">
              <figure class="wow fadeInLeft animated portfolio-item animated" data-wow-duration="300ms" data-wow-delay="0ms" style="visibility: visible; animation-duration: 300ms; -webkit-animation-duration: 300ms; animation-delay: 0ms; -webkit-animation-delay: 0ms; animation-name: fadeInLeft; -webkit-animation-name: fadeInLeft;">
               <div class="img-wrapper">
-                <img src="images/portfolio/appli-expat.jpg" class="img-responsive" alt="portfolio items">
+                <img src="images/portfolio/appli-expat.jpg" class="img-responsive" alt="Application expatforYou">
                 <div class="overlay">
                   <div class="buttons">
                     <a rel="gallery" class="fancybox" href="images/portfolio/appli-expat.jpg">Voir</a>
@@ -158,7 +158,7 @@
           <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 realisations">
             <figure class="wow fadeInLeft animated animated" data-wow-duration="300ms" data-wow-delay="300ms" style="visibility: visible; animation-duration: 300ms; -webkit-animation-duration: 300ms; animation-delay: 300ms; -webkit-animation-delay: 300ms; animation-name: fadeInLeft; -webkit-animation-name: fadeInLeft;">
               <div class="img-wrapper">
-                <img src="images/portfolio/axa.jpg" class="img-responsive" alt="portfolio items">
+                <img src="images/portfolio/axa.jpg" class="img-responsive" alt="AXA Coahesio">
                 <div class="overlay">
                   <div class="buttons">
                     <a rel="gallery" class="fancybox" href="images/portfolio/axa.jpg">Voir</a>
@@ -179,7 +179,7 @@
           <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 realisations">
             <figure class="wow fadeInLeft animated animated" data-wow-duration="300ms" data-wow-delay="300ms" style="visibility: visible; animation-duration: 300ms; -webkit-animation-duration: 300ms; animation-delay: 300ms; -webkit-animation-delay: 300ms; animation-name: fadeInLeft; -webkit-animation-name: fadeInLeft;">
               <div class="img-wrapper">
-                <img src="images/portfolio/jevendspourtoi.jpg" class="img-responsive" alt="">
+                <img src="images/portfolio/jevendspourtoi.jpg" class="img-responsive" alt="Je vends pour toi">
                 <div class="overlay">
                   <div class="buttons">
                     <a rel="gallery" class="fancybox" href="images/portfolio/jevendspourtoi.jpg">Voir</a>
@@ -200,7 +200,7 @@
           <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 realisations">
             <figure class="wow fadeInLeft animated animated" data-wow-duration="300ms" data-wow-delay="300ms" style="visibility: visible; animation-duration: 300ms; -webkit-animation-duration: 300ms; animation-delay: 300ms; -webkit-animation-delay: 300ms; animation-name: fadeInLeft; -webkit-animation-name: fadeInLeft;">
               <div class="img-wrapper">
-                <img src="images/portfolio/massages.jpg" class="img-responsive" alt="">
+                <img src="images/portfolio/massages.jpg" class="img-responsive" alt="M.Massages et Atelier">
                 <div class="overlay">
                   <div class="buttons">
                     <a rel="gallery" class="fancybox" href="images/portfolio/massages.jpg">Voir</a>
@@ -221,7 +221,7 @@
           <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 realisations">
             <figure class="wow fadeInLeft animated animated" data-wow-duration="300ms" data-wow-delay="600ms" style="visibility: visible; animation-duration: 300ms; -webkit-animation-duration: 300ms; animation-delay: 600ms; -webkit-animation-delay: 600ms; animation-name: fadeInLeft; -webkit-animation-name: fadeInLeft;">
               <div class="img-wrapper">
-                <img src="images/portfolio/arteo.jpg" class="img-responsive" alt="">
+                <img src="images/portfolio/arteo.jpg" class="img-responsive" alt="Arteo">
                 <div class="overlay">
                   <div class="buttons">
                     <a rel="gallery" class="fancybox" href="images/portfolio/arteo.jpg">Voir</a>
@@ -242,7 +242,7 @@
           <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 realisations">
             <figure class="wow fadeInLeft animated animated" data-wow-duration="300ms" data-wow-delay="600ms" style="visibility: visible; animation-duration: 300ms; -webkit-animation-duration: 300ms; animation-delay: 600ms; -webkit-animation-delay: 600ms; animation-name: fadeInLeft; -webkit-animation-name: fadeInLeft;">
               <div class="img-wrapper">
-                <img src="images/portfolio/ibs.jpg" class="img-responsive" alt="">
+                <img src="images/portfolio/ibs.jpg" class="img-responsive" alt="IBS Europe">
                 <div class="overlay">
                   <div class="buttons">
                     <a rel="gallery" class="fancybox" href="images/portfolio/ibs.jpg">Voir</a>
@@ -263,7 +263,7 @@
           <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 realisations">
             <figure class="wow fadeInLeft animated animated" data-wow-duration="300ms" data-wow-delay="600ms" style="visibility: visible; animation-duration: 300ms; -webkit-animation-duration: 300ms; animation-delay: 600ms; -webkit-animation-delay: 600ms; animation-name: fadeInLeft; -webkit-animation-name: fadeInLeft;">
               <div class="img-wrapper">
-                <img src="images/portfolio/nicot-meunerie.jpg" class="img-responsive" alt="">
+                <img src="images/portfolio/nicot-meunerie.jpg" class="img-responsive" alt="Nicot Meunerie">
                 <div class="overlay">
                   <div class="buttons">
                     <a rel="gallery" class="fancybox" href="images/portfolio/nicot-meunerie.jpg">Voir</a>
@@ -285,7 +285,7 @@
           <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 realisations">
             <figure class="wow fadeInLeft animated animated" data-wow-duration="300ms" data-wow-delay="600ms" style="visibility: visible; animation-duration: 300ms; -webkit-animation-duration: 300ms; animation-delay: 600ms; -webkit-animation-delay: 600ms; animation-name: fadeInLeft; -webkit-animation-name: fadeInLeft;">
               <div class="img-wrapper">
-                <img src="images/portfolio/passion-berbere.jpg" class="img-responsive" alt="">
+                <img src="images/portfolio/passion-berbere.jpg" class="img-responsive" alt="Passion Berbère">
                 <div class="overlay">
                   <div class="buttons">
                     <a rel="gallery" class="fancybox" href="images/portfolio/passion-berbere.jpg">Voir</a>
@@ -306,7 +306,7 @@
           <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 realisations">
             <figure class="wow fadeInLeft animated animated" data-wow-duration="300ms" data-wow-delay="600ms" style="visibility: visible; animation-duration: 300ms; -webkit-animation-duration: 300ms; animation-delay: 600ms; -webkit-animation-delay: 600ms; animation-name: fadeInLeft; -webkit-animation-name: fadeInLeft;">
               <div class="img-wrapper">
-                <img src="images/portfolio/le-parc.jpg" class="img-responsive" alt="">
+                <img src="images/portfolio/le-parc.jpg" class="img-responsive" alt="le Parc SOA">
                 <div class="overlay">
                   <div class="buttons">
                     <a rel="gallery" class="fancybox" href="images/portfolio/le-parc.jpg">Voir</a>
@@ -327,7 +327,7 @@
           <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 realisations">
             <figure class="wow fadeInLeft animated animated" data-wow-duration="300ms" data-wow-delay="600ms" style="visibility: visible; animation-duration: 300ms; -webkit-animation-duration: 300ms; animation-delay: 600ms; -webkit-animation-delay: 600ms; animation-name: fadeInLeft; -webkit-animation-name: fadeInLeft;">
               <div class="img-wrapper">
-                <img src="images/portfolio/news-ar.jpg" class="img-responsive" alt="">
+                <img src="images/portfolio/news-ar.jpg" class="img-responsive" alt="Annuaire du Roannais">
                 <div class="overlay">
                   <div class="buttons">
                     <a rel="gallery" class="fancybox" href="images/portfolio/news-ar.jpg">Voir</a>
