--- a/mail-send.html
+++ b/mail-send.html
@@ -88,7 +88,7 @@
               <!-- logo -->
               <div class="navbar-brand">
                 <a href="index.php" >
-                  <img src="images/logo.png" alt="" class="logo">
+                  <img src="images/logo.png" alt="Romane Donjon - Logo" class="logo">
                 </a>
               </div>
               <!-- /logo -->
